# djangorestframework-patinations

./: README.md  pyproject.toml  setup.py
drf_pagination/: pagination.py
